# binding-tool

./: .gitignore  Cargo.toml  NOTICE  README.md  dist-workspace.toml
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
.vscode_tmp/: settings.json
src/: args.rs  command.rs  deps.rs  lib.rs  main.rs
src/help/: additional_help.txt  additional_help_binding.txt  additional_help_param.txt
src/scripts/: bash.sh  fish.sh  zsh.sh
