# Copyright 2022-Present the original author or authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "binding_tool"
version = "1.20.3"
edition = "2018"
authors = ["Daniel Mikusa <dmikusa@vmware.com>"]
description = "Generate Kubernetes service bindings for use with Cloud Native Buildpacks"
repository = "https://github.com/dmikusa-pivotal/binding-tool"
readme = "README.md"
license = "Apache-2.0"
keywords = ["cli", "cloud-native", "buildpacks", "service-bindings", "docker", "kubernetes"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
toml = "0.8"
url = "2.4"
sha2 = "0.10"
hex = "0.4"

[dependencies.clap]
version = "4.4"
default-features = false
features = ["std", "cargo", "help", "usage", "error-context", "wrap_help"]

[dependencies.ureq]
version = "2.9"
default-features = false
features = ["tls", "native-certs", "cookies", "gzip", "brotli", "socks-proxy"]

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"
serial_test = "2.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
